  * YAM_COg.c, YAM_FI.c: implemented a filter import from Thunderbird's .sfd
    files. This import will try to replicate the given filters as close as
    possible using YAM's filtering facilities. Please note that not all features
    of Thunderbird's filters can be replicated by YAM due to fundamental
    differences in operation. This closes #128.

2012-07-09 Jens Langner <Jens.Langner@light-speed.de>

  * locale/YAM.cd, tcp/ssl.c: added some error and warning output in case the CAPATH
    and/or CAFILE was not found during the SSL certificate verification process.
    This should give users a hint why YAM pops up a SSL verification error even if
    the connection peer uses fully verified certificates.

2012-07-08 Jens Langner <Jens.Langner@light-speed.de>

  * base64.c: fixed bug in base64decode() where an incorrect pointer was used for
    the calculation of the final output string length. This caused crashes when
    extracting attachments from base64 encoded emails after the recent base64
    API changes.
  * Requesters.c, misc: did some housekeeping regarding the function calls of
    MUI_Request(). Now a refWindow should always be specified so that the position
    will always be relative to it. In addition MUIF_NONE is now always applied.
    Furthermore MSG_OkayReq is now used instead of MSG_Okay as that contains
    definitions for a keyboard shortcut.

2012-07-07 Samir Hawamdeh <s.hawamdeh@tin.it>

  * locale/italian.ct: update according to the latest changes.

2012-07-07 Jens Langner <Jens.Langner@light-speed.de>

  * Requesters.c, mui/GenericRequestWindow.c, tcp/ssl.c, misc: moved the
    SSL Certificate warning requester code to an own function in Requesters.c
    and adapted GenericRequestWindow to allow to use a Floattext for
    creating requesters with resizable text. Now the certificate warning
    requester has an additional button "Show Certificate" which will show
    the whole human-readable output of the certificate in question so that a