@@ -1040,7 +1040,7 @@ HOOKPROTONHNONP(AddNewFilterToList, void)
 {
   struct FilterNode *filterNode;
 
-  if((filterNode = CreateNewFilter()) != NULL)
+  if((filterNode = CreateNewFilter(FA_ABORT)) != NULL)
   {
     DoMethod(G->CO->GUI.LV_RULES, MUIM_NList_InsertSingle, filterNode, MUIV_NList_Insert_Bottom);
     set(G->CO->GUI.LV_RULES, MUIA_NList_Active, MUIV_NList_Active_Bottom);
