@@ -196,7 +196,7 @@ void FreeFilterList(struct MinList *filterList);
 BOOL ExecuteFilterAction(const struct FilterNode *filter, struct Mail *mail, struct FilterResult *result);
 BOOL CopyFilterData(struct FilterNode *dstFilter, struct FilterNode *srcFilter);
 void FreeFilterRuleList(struct FilterNode *filter);
-struct FilterNode *CreateNewFilter(void);
+struct FilterNode *CreateNewFilter(const int actions);
 void FreeFilterList(struct MinList *filterList);
 struct RuleNode *CreateNewRule(struct FilterNode *filter, const int flags);
 struct RuleNode *GetFilterRule(struct FilterNode *filter, int pos);
